--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,16 @@
 
+{
+  "short_name": "بانگ",
+  "name": "کاتەکانی بانگ",
+  "icons": [
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/2830/2830239.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#0f172a",
+  "background_color": "#0f172a"
+}
