--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
-
 {
   "short_name": "بانگ",
-  "name": "کاتەکانی بانگ",
+  "name": "کاتەکانی بانگ - داریان",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2830/2830239.png",
+      "src": "https://i.imgur.com/vH97Nl8.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#0f172a",
   "background_color": "#0f172a"
 }
