--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,15 @@
 {
+  "name": "کاتەکانی بانگ",
   "short_name": "بانگ",
-  "name": "کاتەکانی بانگ - داریان",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#0f172a",
+  "theme_color": "#38bdf8",
   "icons": [
     {
       "src": "https://i.imgur.com/vH97Nl8.png",
       "sizes": "192x192",
       "type": "image/png"
-    },
-    {
-      "src": "https://i.imgur.com/vH97Nl8.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
     }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "orientation": "portrait",
-  "theme_color": "#0f172a",
-  "background_color": "#0f172a"
+  ]
 }
